Fixed status box position to not overlap scrollbar

--- a/client/src/components/Admin/MySettings/styles.css
+++ b/client/src/components/Admin/MySettings/styles.css
@@ -198,7 +198,7 @@
 .settingsStatus {
   position: fixed;
   bottom: 10px;
-  right: 10px;
+  right: 20px;
 
   background: var(--card-color1);
   padding: 10px;
